Kipi-plugins 3.2.0 - Release date: 2013/04/07
------------------------------------------------------------------------

NEW FEATURES:


BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 316620 - HtmlExport doesn't build.
002 ==> 