@@ -67,10 +67,12 @@ FbNewAlbum::FbNewAlbum(QWidget* const parent)
     m_privacyCoB        = new KComboBox;
     m_privacyCoB->setEditable(false);
     m_privacyCoB->setWhatsThis(i18n("Privacy setting of the album that will be created (required)."));
+    m_privacyCoB->addItem(KIcon("secure-card"),           i18n("Only Me"),                 FB_ME);
     m_privacyCoB->addItem(KIcon("user-identity"),         i18n("Only Friends"),            FB_FRIENDS);
     m_privacyCoB->addItem(KIcon("system-users"),          i18n("Friends of Friends"),      FB_FRIENDS_OF_FRIENDS);
     m_privacyCoB->addItem(KIcon("network-workgroup"),     i18n("My Networks and Friends"), FB_NETWORKS);
     m_privacyCoB->addItem(KIcon("applications-internet"), i18n("Everyone"),                FB_EVERYONE);
+    m_privacyCoB->setCurrentIndex(1);
 
     QFormLayout* const albumBoxLayout = new QFormLayout;
     albumBoxLayout->addRow(i18nc("new facebook album", "Title:"),       m_titleEdt);
